Update challenge attachments endpoints
